--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <script>
         window.$docsify = {
             // 项目名称
-            name: 'Docsify-Sample',
+            name: 'BOXTRADE-天启',
             // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
-            repo: 'https://github.com/boxtrade/docsify_sample',
+            # repo: 'https://github.com/boxtrade/quant_view',
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
             loadSidebar: true,
             // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
@@ -47,8 +47,8 @@
 
               plugins: [
                           EditOnGithubPlugin.create(
-                            'https://github.com/boxtrade/docsify_sample/blob/main/',
-                            'https://github.com/boxtrade/docsify_sample/edit/main/',
+                            'https://github.com/boxtrade/quant_view/blob/main/',
+                            'https://github.com/boxtrade/quant_view/edit/main/',
                             function(file) {
                               if (file.indexOf('en') === -1) {
                                 return '编辑'
