--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             // 项目名称
             name: 'BOXTRADE-天启',
             // 仓库地址，点击右上角的Github章鱼猫头像会跳转到此地址
-            # repo: 'https://github.com/boxtrade/quant_view',
+            // repo: 'https://github.com/boxtrade/quant_view',
             // 侧边栏支持，默认加载的是项目根目录下的_sidebar.md文件
             loadSidebar: true,
             // 导航栏支持，默认加载的是项目根目录下的_navbar.md文件
